Fix Z-index

--- a/src/app/src/assets/image.css
+++ b/src/app/src/assets/image.css
@@ -16,7 +16,7 @@ img.image.image-gif {
 .image-modal {
     display: none; /* Hidden by default */
     position: fixed; /* Stay in place */
-    z-index: 7; /* Sit on top */
+    z-index: 99; /* Sit on top */
     left: 0;
     top: 0;
     width: 100%; /* Full width */
